docs: fix menu not working on mobile

--- a/docs/_sass/color_schemes/pharmcat.scss
+++ b/docs/_sass/color_schemes/pharmcat.scss
@@ -28,3 +28,8 @@ $callouts: (
     padding-bottom: .125rem;
   }
 }
+
+// hide footer so that menu works on mobile
+.site-footer {
+  display: none;
+}
